kubernetes/jenkins/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service-2
  namespace: devops-tools
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
spec:
  selector:
    app: jenkins-server
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8080
